--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,61 @@
-body{background: pink;
+body{
+    background: #f9f7fe;
+    font-family: sans-serif;
 }
-h1{text-align: center;}
-footer{text-align: center;}
+.container{
+    max-width: 650px;
+    margin: 60px auto;
+background-color: white;
+padding:30px ;
+box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
+border-radius: 10px;
+}
+
+select{
+    display: block;
+    width: 100%;
+    padding: 6px;
+    border-radius: 10px;
+    font-size: 18px;
+
+}
+
+h1{
+    text-align: center;
+font-size: 36px;
+font-family: sans-serif;}
+
+h2{
+    margin: 0 0 5px;
+font-size: 28px;}
+
+.city{
+    display: flex;
+justify-content: space-between;
+margin: 10px 0;
+padding: 30px 0;
+border-bottom: 1px dashed rgba(0,0,0,0.2);}
+
+.city :last-child{
+    border: none;
+}
+
+.time{
+    font-size: 48px;
+    font-weight: bold;
+    
+}
+
+.time small{
+    font-size: 24px;
+vertical-align: middle;}
+
+.date{
+    opacity: 0.7;}
+
+
+footer{
+    text-align: center;
+font-size: 16px;
+color: rgba(0,0,0,0.8);}
+
